# Meowgram

./: .gitignore  README.md  com.github.ExposedCat.Meowgram.json  meson.build  meson_options.txt
.flatpak-builder/cache/refs/heads/x86_64-com.github.ExposedCat.Meowgram.json/: build-meowgram  cleanup  finish  init
.flatpak-builder/checksums/: x86_64-com.github.ExposedCat.Meowgram.json
.github/workflows/: testing.yml
build-dir/: metadata
build-dir/files/: manifest.json
build-dir/files/share/glib-2.0/schemas/: gschemas.compiled
build-dir/files/share/meowgram/: meowgram.gresource
build-dir/files/share/meowgram/meowgram/: main.py  window.py
data/: com.github.ExposedCat.Meowgram.appdata.xml.in  com.github.ExposedCat.Meowgram.desktop.in  com.github.ExposedCat.Meowgram.gschema.xml  meowgram.gresource.xml  meson.build
data/logo/: meson.build
data/resources/: meowgram.gresource.xml  meson.build
data/resources/css/: style.css
data/resources/ui/: login.ui  menus.ui  window.ui
data/ui/: contact.ui  contactrow.ui  context_menus.ui  dialog_row.ui  login.ui  login_window.ui  loginwindow.ui  main_window.ui  menus.ui  message.ui  message_row.ui  messagerow.ui  preferenceswindow.ui  shortcuts_window.ui  shortcutswindow.ui  style.css  window.ui
po/: POTFILES  meson.build
src/: config.py.in  constants.py  contact.ui  login.py  main.py  menus.ui  meowgram.gresource.xml  meowgram.in  meowgram_constants.py  meson.build  message.ui  windo.ui  window.py  window.ui
src/backend/: asyncio_separator.py  init_client.py  login_utils.py  telegram_client.py
src/connectors/: dialogs.py  login.py  messages.py
src/utils/: fuzzify.py  imgb.php?id=3936&large=1  sessions.py  tools.py
src/widgets/: contact_row.py  contactrow.py  context_menu.py  dialog_row.py  dialogs_view.py  login_window.py  loginwindow.py  main_window.py  message_row.py  messagerow.py  preferences_window.py  preferenceswindow.py  window.py
